tests/ui/parser/import-glob-rename.stderr
error: expected `;`, found keyword `as`
  --> $DIR/import-glob-rename.rs:3:12
   |
LL | use foo::* as baz;
   |            ^^ expected `;`
   |
   = note: the wildcard token must be last on the path

error: aborting due to previous error

